--- a/src/components/AccountBox/AccountBox.css
+++ b/src/components/AccountBox/AccountBox.css
@@ -12,12 +12,20 @@
 
 .top-container {
 	width: 100%;
-	height: 175px;
+	height: 150px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
 	padding: 0 1.8em;
 	padding-bottom: 5em;
+}
+
+.inner-container {
+	padding: 10px;
+	/* width: 100%; */
+	display: flex;
+	flex-direction: column;
+	padding: 0 1.8em;
 }
 
 .back-drop {
@@ -37,6 +45,11 @@
 		rgba(245, 98, 23, 1) 0%,
 		rgba(5, 136, 212, 1) 50%
 	);
+	transition: height 1s;
+}
+
+.back-drop-expanded {
+	height: 1245px;
 }
 
 .header-container {
